[gd_scene load_steps=4 format=3 uid="uid://x1m4cskfo4vd"]

[ext_resource type="Script" path="res://Spire2D.gd" id="1_eoap4"]
[ext_resource type="Texture2D" uid="uid://v8xq6a2pbl0c" path="res://spire-logo-png-transparent.png" id="2_skreq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qowp6"]
size = Vector2(246, 235)

[node name="Area2D" type="Area2D"]
script = ExtResource("1_eoap4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-8, -5)
shape = SubResource("RectangleShape2D_qowp6")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-14.5, -6.50002)
scale = Vector2(0.06875, 0.06625)
texture = ExtResource("2_skreq")

[node name="ChargeTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="ChargeTimer" to="." method="_on_charge_timer_timeout"]
